--- a/ready.kv
+++ b/ready.kv
@@ -8,9 +8,27 @@
             pos: self.pos
             size: self.size
             source: "data//bg.jpg"
+
+    # MDBackdrop:
+    #     id: backdrop
+    #     # on_open: home.opening_animation_backdrop_components(backdrop, backlayer)
+    #     # on_close:
+    #     #     backlayer.ids.screen_manager.current = "settings"
+    #     #     home.closing_animation_backdrop_components(backdrop, backlayer)
+    #     # left_action_items: [['menu', lambda x: self.open()]]
+    #     title: "Instagram Status"
+    #     header_text: "Menu:"    
+   
+    
     BoxLayout:
         orientation: 'vertical'
         size_hint_y: 1
+
+        MDToolbar:
+            title: "Instagram Status"
+            elevation: 10
+            type: "top"
+            right_action_items: [["details", lambda x: root.showLog()],["home-outline", lambda x: root.navToHome()],["logout", lambda x: root.logoutConfirm()]]
 
         BoxLayout:
             orientation: 'horizontal'            
@@ -52,7 +70,7 @@
 
                 MDRaisedButton:
                     text: "Start"
-                    on_press: root.startBot()
+                    on_release: root.startBot()
                     id: btnStart
                     size_hint: 1, 0.05
                     os_hint: {'center_x': .5, 'center_y': .5}
@@ -65,11 +83,12 @@
 
                 MDRaisedButton:
                     text: "Stop"
-                    on_press: root.disconnect()
+                    on_release: root.stop()
                     id : btnStop
                     size_hint: 1, 0.1
                     pos_hint: {"center_x": .5}
                     md_bg_color: get_color_from_hex("#FF0000")
+                    disabled : True
 
                
 
@@ -175,20 +194,12 @@
                 pos_hint: {'center_x': .5, 'center_y': .5}
                 active: False
 
-            MDRaisedButton:
-                text: "Show Log"
-                on_press: root.showLog()
-                id : btnShowLog
-                size_hint: 0.1, 0.1
-                pos_hint: {"center_x": .5}
-
-
-
 
         MDTextFieldRect:
             id:logLabel
-            text: "Bot Log here"
+            text: ""
             font_size: 16
             multiline:True
             opacity:0
         
+   
