--- a/home.kv
+++ b/home.kv
@@ -84,6 +84,7 @@
                     size_hint: 0.5, 0.2
                     text : "Linkedin"
                     halign: 'center'
+                    font_style: 'H5'
 
 
                 Image:
@@ -119,8 +120,9 @@
                     id:xyz
                     pos_hint: {"center_x": .5}
                     size_hint: 0.5, 0.2
-                    text : "Tictoc"
+                    text : "TiKtoK"
                     halign: 'center'
+                    font_style: 'H5'
 
 
                 Image:
