--- a/ready.kv
+++ b/ready.kv
@@ -66,7 +66,8 @@
                 spacing:10
 
                 MDLabel:
-                    text: " "
+                    text: "Auto Start at"
+                    id :lblAutoStart
 
                 MDRaisedButton:
                     text: "Start"
@@ -131,17 +132,21 @@
                 text: "F"
                 size_hint: 1, 0.8
                 halign : 'center'
+                font_style: 'H5'
             MDLabel:
                 text: "U"
                 halign : 'center'
+                font_style: 'H5'
                 
             MDLabel:
                 text: "L"
                 halign : 'center'
+                font_style: 'H5'
                 
             MDLabel:
                 text: "S"
                 halign : 'center'
+                font_style: 'H5'
            
            
             
@@ -169,18 +174,22 @@
             MDLabel:
                 text: "C"
                 halign : 'center'
+                font_style: 'H5'
 
             MDLabel:
                 text: "LX"
                 size_hint: 1, 0.8
                 halign : 'center'
+                font_style: 'H5'
             MDLabel:
                 text: "FX"
                 halign : 'center'
+                font_style: 'H5'
                 
             MDLabel:
                 text: "CX"
                 halign : 'center'
+                font_style: 'H5'
                 
         BoxLayout:
             orientation: 'vertical'
