--- a/iglogin.kv
+++ b/iglogin.kv
@@ -37,7 +37,7 @@
                     pos_hint: {"center_x": .5}
                     size_hint: 0.5, 0.1
 
-                MDTextFieldRound:
+                MDLabel:
                     id: login
                     normal_color: [0, 0, 0, 0.2]
                     active_color: [0, 0, 0, 0.2]
@@ -62,6 +62,7 @@
                     hint_text: "Password"
                     max_text_length: 60
                     required: True
+                    write_tab: False
                     
 
                 MDRaisedButton:
