--- a/home.kv
+++ b/home.kv
@@ -17,7 +17,7 @@
             id:xyz
             pos_hint: {"center_x": .5}
             size_hint: 0.8, 0.2
-            text : "Connect to a Service"
+            text : "Connect to a service"
             halign: 'center'
 
         
@@ -62,10 +62,13 @@
                     on_release: root.btnIG_released()
                 
                 MDLabel:
-                    id:xyz
+                    id:lblstatusIG
                     pos_hint: {"center_x": .5}
                     text : " "
-                    size_hint: 0.5, 0.1
+                    size_hint: 0.8, 0.1
+                    font_style: 'Body1'
+                    theme_text_color: 'Secondary'
+                    halign: 'center'
 
             BoxLayout:
                 orientation: "vertical"
@@ -100,7 +103,7 @@
                     enabled : False
                 
                 MDLabel:
-                    id:xyz
+                    id:lblstatusLinkedIn
                     pos_hint: {"center_x": .5}
                     text : " "
                     size_hint: 0.5, 0.1
