--- a/iglogin.kv
+++ b/iglogin.kv
@@ -28,36 +28,38 @@
                 Image:
                     source: "data//iglogo.png"
                     size_hint: None, None
-                    size: dp(140), dp(140)
+                    size: dp(100), dp(100)
                     pos_hint: {"center_x": .5}
 
                 
                 MDLabel:
-                    text: 'Enter your Instsagram username and login to continue'
+                    text: 'Enter your Instsagram password for :'
                     pos_hint: {"center_x": .5}
                     size_hint: 0.5, 0.1
+                    font_style: 'H5'
+                    halign : 'center'
 
                 MDLabel:
                     id: login
-                    normal_color: [0, 0, 0, 0.2]
-                    active_color: [0, 0, 0, 0.2]
+                   
                     icon_type: "left"
                     size_hint: .5, None
                     pos_hint: {"center_x": .5}
                     hint_text: "Instagram Username"
-                    max_text_length: 60
-                    required: True
+                    halign : 'center'
+                    font_style: 'H4'
+                   
                     
                 
 
                 MDTextFieldRound:
                     id: password
                     password: True
-                    normal_color: [0, 0, 0, 0.2]
-                    active_color: [0, 0, 0, 0.2]
+                    # normal_color: [0, 0, 0, 0.2]
+                    # active_color: [0, 0, 0, 0.2]
                     icon_type: "left"
                     icon_left: "lock"
-                    size_hint: .5, None
+                    size_hint: .5, 0.2
                     pos_hint: {"center_x": .5}
                     hint_text: "Password"
                     max_text_length: 60
@@ -67,7 +69,7 @@
 
                 MDRaisedButton:
                     text: "Instagram Login"
-                    size_hint: .3, 0.1
+                    size_hint: .3, 0.2
                     pos_hint: {"center_x": .5}
                     on_release: root.do_login(login.text, password.text)
                 
