--- a/home.kv
+++ b/home.kv
@@ -123,7 +123,7 @@
                     id:xyz
                     pos_hint: {"center_x": .5}
                     size_hint: 0.5, 0.2
-                    text : "TiKtoK"
+                    text : "TikToK"
                     halign: 'center'
                     font_style: 'H5'
 
