--- a/login.kv
+++ b/login.kv
@@ -39,7 +39,7 @@
                     pos_hint: {"center_x": .5}
 
                 MDLabel:
-                    text: 'Enter SPPro username and pin'
+                    text: 'Enter Instagram username and SPPro PIN code'
                     pos_hint: {"center_x": .5}
                     size_hint: 0.5, 0.1
                     font_style: 'H5'
@@ -52,7 +52,7 @@
                     icon_type: "left"
                     size_hint: .5, 0.1
                     pos_hint: {"center_x": .5}
-                    hint_text: "Social Planner Username"
+                    hint_text: "Instagram Username"
                     max_text_length: 60
                     required: True
                     write_tab: False
@@ -67,7 +67,7 @@
                     icon_left: "lock"
                     size_hint: .5, 0.1
                     pos_hint: {"center_x": .5}
-                    hint_text: "pin"
+                    hint_text: "SPPro PIN code"
                     max_text_length: 60
                     required: True
                     write_tab: False
