--- a/iglogin.kv
+++ b/iglogin.kv
@@ -65,6 +65,7 @@
                     max_text_length: 60
                     required: True
                     write_tab: False
+                    font_size:37
                     
 
                 MDRaisedButton:
