--- a/login.kv
+++ b/login.kv
@@ -56,6 +56,7 @@
                     max_text_length: 60
                     required: True
                     write_tab: False
+                    font_size:37
                     
 
                 MDTextFieldRound:
@@ -71,6 +72,7 @@
                     max_text_length: 60
                     required: True
                     write_tab: False
+                    font_size:37
                     
 
                 MDRaisedButton:
@@ -86,7 +88,7 @@
                     size_hint: 0.5, 0.1
                     theme_text_color: 'Primary'
                 MDLabel:
-                    text: '1 - Open Instagram website on this pc before logging in. \n2 - You can minimise this application after starting \n3 - To close the app press close button'
+                    text: '1 - Open Instagram website on this pc before logging in. \n2 - You can minimise this application after starting \n3 - To close the app press close button after stopping the run.'
                     font_style: 'Body1'
                     pos_hint: {"center_x": .5}
                     size_hint: 0.5, 0.1
