progress bar being implemented

--- a/home.kv
+++ b/home.kv
@@ -69,6 +69,8 @@
                     font_style: 'Body1'
                     theme_text_color: 'Secondary'
                     halign: 'center'
+                    valign:'top'
+                    font_size:25
 
             BoxLayout:
                 orientation: "vertical"
@@ -107,6 +109,7 @@
                     pos_hint: {"center_x": .5}
                     text : " "
                     size_hint: 0.5, 0.1
+                    font_size:25
 
             BoxLayout:
                 orientation: "vertical"
