timeout changed and also font adjusted

--- a/home.kv
+++ b/home.kv
@@ -70,7 +70,7 @@
                     theme_text_color: 'Secondary'
                     halign: 'center'
                     valign:'top'
-                    font_size:25
+                    font_size:'17dp'
 
             BoxLayout:
                 orientation: "vertical"
