--- a/ready.kv
+++ b/ready.kv
@@ -83,7 +83,7 @@
                         MDLabel:
                             text: "Auto Start at"
                             id :lblAutoStart
-                            font_size: 25
+                            font_size: '15dp'
                             size_hint: 0.6, 1
                             halign:"right"
 
@@ -101,7 +101,7 @@
                         MDLabel:
                             id: lblTotalTime
                             text: "Time Remaining :  0:00:00"
-                            font_size: 25
+                            font_size: '15dp'
                             size_hint: 0.6, 1
                             halign:"right"
                            
@@ -130,7 +130,7 @@
                         CircularProgressBar:
                             # pos: 400, 100
                             id:pbar
-                            widget_size: 110
+                            widget_size: 100
         
         MDLabel:
            #spacer
