--- a/login.kv
+++ b/login.kv
@@ -50,13 +50,13 @@
                     # normal_color: [0, 0, 0, 0.2]
                     # active_color: [0, 0, 0, 0.2]
                     icon_type: "left"
-                    size_hint: .5, 0.1
+                    size_hint: .5, 0.2
                     pos_hint: {"center_x": .5}
                     hint_text: "Instagram Username"
                     max_text_length: 60
                     required: True
                     write_tab: False
-                    font_size:37
+                    font_size:"28dp"
                     
 
                 MDTextFieldRound:
@@ -66,18 +66,18 @@
                     # active_color: [0, 0, 0, 0.2]
                     icon_type: "left"
                     icon_left: "lock"
-                    size_hint: .5, 0.1
+                    size_hint: .5, 0.2
                     pos_hint: {"center_x": .5}
                     hint_text: "SPPro PIN code"
                     max_text_length: 60
                     required: True
                     write_tab: False
-                    font_size:37
+                    font_size:"28dp"
                     
 
                 MDRaisedButton:
                     text: "Login"
-                    size_hint: .3, 0.1
+                    size_hint: .3, 0.2
                     pos_hint: {"center_x": .5}
                     on_release: root.do_login(login.text, password.text)
 
