plan restricton implemented

--- a/ready.kv
+++ b/ready.kv
@@ -25,6 +25,7 @@
         size_hint_y: 1
 
         MDToolbar:
+            id : tbar
             title: "Instagram Status"
             elevation: 10
             type: "top"
