--- a/iglogin.kv
+++ b/iglogin.kv
@@ -55,8 +55,8 @@
                 MDTextFieldRound:
                     id: password
                     password: True
-                    # normal_color: [0, 0, 0, 0.2]
-                    # active_color: [0, 0, 0, 0.2]
+                    normal_color: [1, 1, 1, 0]
+                    color_active: [0.8, 0.8, 0.8, 0]
                     icon_type: "left"
                     icon_left: "lock"
                     size_hint: .5, 0.2
@@ -65,7 +65,7 @@
                     max_text_length: 60
                     required: True
                     write_tab: False
-                    font_size:37
+                    font_size:"28dp"
                     
 
                 MDRaisedButton:
