blacklist bring implemented

--- a/home.kv
+++ b/home.kv
@@ -16,9 +16,10 @@
         MDLabel:
             id:xyz
             pos_hint: {"center_x": .5}
-            size_hint: 0.8, 0.2
-            text : "Connect to a service"
+            size_hint: 0.8, 0.3
+            text : "Connect To A Growth Service"
             halign: 'center'
+            font_style:"H4"
 
         
 
